# Calculator

./: .gitignore  Cargo.toml  LICENSE  readme.md
src/: button.rs  calculator.rs  css.rs  defs.rs  main.rs  style.css  ui.rs  widget.rs
src/calculator/: mod.rs
src/css/: mod.rs  style.css
src/editable_entry_text/: mod.rs
src/grid/: mod.rs
src/operator_symbols/: mod.rs
src/resources/css/: styles.css
src/resources/ui/: menu.ui
src/symbol_names/: mod.rs
src/ui/: mod.rs
src/widgets/: mod.rs
