[package]
name = "calculator"
version = "0.7.4"
edition = "2021"
description = "basic calculator app for simple calculations"
license = "The 3-Clause BSD License"
authors = ["Salmaan Saeed"]

[dependencies]
gtk = { version = "0.4.8", package="gtk4" }
gdk = { version = "0.4.8", package="gdk4" }
glib-macros = "0.15.11"
gio = "0.15.12"
gdk-pixbuf = "0.15.11"

